[project]
name = "mini-vllm"
version = "0.1.0"
description = "A minimal, hackable inference engine inspired by vLLM"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "triton>=3",
    "transformers>=4.51",
    "xxhash",
]

[project.optional-dependencies]
flash = ["flash-attn"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist",
    "ruff>=0.6",
    "pre-commit>=3.7",
    # Build backend for source builds of flash-attn under no-build-isolation
    # (see [tool.uv] below). Not needed when installing the prebuilt wheel.
    "setuptools",
    "wheel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mini_vllm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires a CUDA device",
    "slow: long-running test",
]

[tool.uv]
# flash-attn needs torch already installed at build time; install via the
# `flash` extra after the base env is created (see README).
no-build-isolation-package = ["flash-attn"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
